fix: Change gap of character grid for tablet

--- a/blog/css/5coins.css
+++ b/blog/css/5coins.css
@@ -124,7 +124,6 @@
         grid-template-areas:
             "pic name"
             "info info";
-        gap: 0 20px;
     }
 
     .character-img {
